# flytekit

./: .bash_history  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .setup.py.swo  .swp  .travis.yml  123  CODEOWNERS  Dockerfile  Dockerfile.agent  Dockerfile.backend-plugin  Dockerfile.backend-plugin-system-grpc  Dockerfile.connector  Dockerfile.default-image-builder  Dockerfile.dev  Dockerfile.external-plugin-service  Dockerfile.flyteplugins-service  Dockerfile.k8sdataservice  Dockerfile.py3.10  Dockerfile.py3.7  Dockerfile.py3.8  Dockerfile.py3.9  Dockerfile.py310  Dockerfile.py37  Dockerfile.py38  Dockerfile.py39  Dockerfile.rust  MANIFEST.in  Makefile  README.md  RunpodAgent.py  SUMMARY.md  Stack Trace.txt  _handle_unauthenticated_error_opt.txt  agent_tester.py  backend-plugin-system-grpc.yaml  backend-plugin-system_grpc.yaml  backend-plugin.yaml  (+66 more)
.claude/: settings.local.json
.demo/: Fee Waiver demo.ipynb  waive-fee.ipynb
.github/: codespell-ignored-words
.pytest_flyte/: docker-compose.yaml  kustomization-605d6de0bc4f6aeb188bd0bd8c35f24f.yaml
_rsts/: flytekit.bin.rst  flytekit.clients.rst  flytekit.clis.auth.rst  flytekit.clis.flyte_cli.rst  flytekit.clis.rst  flytekit.clis.sdk_in_container.rst  flytekit.common.core.rst  flytekit.common.exceptions.rst  flytekit.common.mixins.rst  flytekit.common.rst  flytekit.common.tasks.rst  flytekit.common.tasks.sagemaker.rst  flytekit.common.types.impl.rst  flytekit.common.types.rst  flytekit.configuration.rst  flytekit.contrib.notebook.rst  flytekit.contrib.rst  flytekit.contrib.sensors.rst  flytekit.engines.flyte.rst  flytekit.engines.rst  flytekit.engines.unit.rst  flytekit.interfaces.data.gcs.rst  flytekit.interfaces.data.http.rst  flytekit.interfaces.data.local.rst  flytekit.interfaces.data.rst  flytekit.interfaces.data.s3.rst  flytekit.interfaces.rst  flytekit.interfaces.stats.rst  flytekit.models.admin.rst  flytekit.models.core.rst  flytekit.models.rst  flytekit.models.sagemaker.rst  flytekit.rst  flytekit.sdk.rst  flytekit.sdk.sagemaker.rst  flytekit.tools.rst  flytekit.type_engines.default.rst  flytekit.type_engines.rst  index.rst  tests.flytekit.common.rst  (+33 more)
async_prototype/: flytekit_async.py  integration_tests.py
auto_cache_examples/: example_wf.py
docs/: Makefile  requirements.txt
flyrs/: .gitignore  Cargo.toml  build.rs  build.sh  perf.py  pyproject.toml  readme.md  remote.py  setup.sh  t.py  test_FlyteRemote.py  test_flyte_remote.py  test_flytekit_remote.py
flyrs/clients/: backfill.py  entities.py  executions.py  friendly.py  lazy_entity.py
flyrs/protos/flyteidl/admin/: agent.proto  event.proto  execution.proto  launch_plan.proto  matchable_resource.proto  node_execution.proto  project.proto  signal.proto  task.proto  workflow.proto
flyrs/protos/flyteidl/cacheservice/: cacheservice.proto
flyrs/protos/flyteidl/core/: identifier.proto  metrics.proto  types.proto  workflow.proto
flyrs/protos/flyteidl/event/: event.proto
flyrs/protos/flyteidl/plugins/: dask.proto  mpi.proto  pytorch.proto  tensorflow.proto
flyrs/protos/flyteidl/plugins/kubeflow/: common.proto  mpi.proto  pytorch.proto
flyrs/remote/: backfill.py  entities.py  executions.py  friendly.py  lazy_entity.py  remote.py
flyrs/src/: auth.rs  authenticator.rs  lib.rs  main.rs  raw.rs
flyrs/tests/: test_rust_remote.py
flytekit/: __init__.py  conf.py  dynamic.py  engine.py  experimental.py  fast_katrina.py  katrina.py  loggers.py  test.py  translator.py  trigger.py  typing.py  user_code.py
flytekit/core/rust/: Cargo.toml  fs.py  test.py
flytekit/core/rust/src/: lib.rs
flytekit/core/rust_file_system/: Cargo.toml  pyproject.toml
flytekit/core/rust_file_system/src/: lib.rs
flytekit_scripts/: Readme.rst  flytekit_build_image.sh  flytekit_install_spark.sh  flytekit_install_spark3.sh  flytekit_mpi_runner.py
fresh_env/: pyvenv.cfg
migrate_examples/: hello.py
migrate_exmaples/: hello.py
notebook-task-examples/: python-notebook.ipynb  spark-notebook-pi.ipynb
notebooks/: python-notebook.ipynb  spark-notebook-pi.ipynb
plugins/: Makefile  README.md  __init__.py  conftest.py  run_all_plugins.sh  setup.py
rust/flyrs/: Cargo.toml  pyproject.toml
rust/flyrs/flyrs_test/: README.md  test.sh
rust/flyrs/flyrs_test/testdata/: inputs.pb
rust/flyrs/src/: distribution.rs  executor.rs  main.rs
(+2620 files in other folders)
