[package]
name = "flyrs"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "flyrs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21.2", features = [ "abi3-py312", "extension-module" ] }
flyteidl = { git = "https://github.com/flyteorg/flyte.git", branch = "master" }
prost = "0.12.4"
tonic = { version = "0.11.0", features = ["tls", "tls-roots"] }
tokio = "1.37.0"
anyhow = "1.0.83"
oauth2 ={ version = "4.4.2", features = ["ureq"] }
url = "2.5.0"
keyring = "2.3.3"
openssl = "0.10.64"
