[package]
name = "flyrs"
version = "0.1.0"
edition = "2021"

[lib]
# The name of the native library. This is the name which will be used in Python to import the
# library (i.e. `import string_sum`). If you change this, you must also change the name of the
# `#[pymodule]` in `src/lib.rs`.
name = "flyrs"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
prost = "0.12.3"
tonic = "0.11.0"
tokio = { version = "1.37.0", features = ["full"] }
pyo3 = { version = "0.21", features = ["extension-module", "experimental-async"] }
flyteidl = { git="https://github.com/austin362667/flyte.git", branch = "austin362667/flyteidl/rs" }
tower = "0.4.13"

[build-dependencies]

