[build-system]
requires = ["maturin>=1.5.1,<2.0"]
build-backend = "maturin"

[project]
name = "flyrs"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]
dynamic = ["version"]
[tool.maturin]
features = ["pyo3/extension-module"]
